methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  	avance()
    while (estSurBiscuit()==false){
     
     if (getCouleurSol()==Color.green) {
       recule()
       avance()
     }
      else{
        recule()
        gauche()
     }
      avance()
    }
  	recule()
  	avance()
}